--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,9 @@ avatar: assets/img/coding.png				# Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_text: ""  # Change Blog header text
+header_text: " "  # Change Blog header text
 header_feature_image: assets/img/pexels/triangular.jpeg
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
+footer_text: " "
 
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
