--- a/_data/language.yml
+++ b/_data/language.yml
@@ -3,13 +3,13 @@ str_follow_on: "Follow on"
 str_rss_follow: "Follow RSS feed"
 str_share_on: "Share on"
 str_add_to: "Add to"
-str_email: "Email"
-str_tweet: "Tweet"
-str_pin_it: "Pin it"
-str_next_post: "Next post"
-str_previous_post: "Previous post"
-str_next_page: "Next"
-str_previous_page: "Prev"
+str_email: "이메일"
+str_tweet: "트윗"
+str_pin_it: "핀"
+str_next_post: "다음글"
+str_previous_post: "이전글"
+str_next_page: "다음"
+str_previous_page: "이전"
 str_javascript_required_disqus: "Please enable JavaScript to view comments."
 str_no_result_found: "No result found"
 str_cookie_approve: "Approve"
