--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,9 @@ description: "오래 기억하기 위해 기록하는 코딩일기장"      # us
 avatar: assets/img/coding.png				# Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
-# Header and footer textg
+# Header and footer text
+header_text: "이니의 코딩노트"  # Change Blog header text
+header_feature_image: assets/img/pexels/triangular.jpeg
 footer_text: " "
 
 # Blog
