--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ avatar: assets/img/coding.png				# Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_text: "이니의 코딩노트"  # Change Blog header text
-header_feature_image: assets/img/pexels/triangular.jpeg
+header_text: "오래 기억하기 위해 기록하는 코딩일기장"  # Change Blog header text
+header_feature_image: assets/img/pexels/books.jpg
 footer_text: " "
 
 # Blog
