--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@ url: "https://inhee-k.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
 title: "이니의 코딩노트"                                 # site's title
-description: "오래 기억하기 위해 기록하는 코딩일기장"      # used by search engines
+description: "기록하고 기억하기"      # used by search engines
 avatar: assets/img/coding.png				# Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_text: "오래 기억하기 위해 기록하는 코딩일기장"  # Change Blog header text
+header_text: "기록하고 기억하기"  # Change Blog header text
 header_feature_image: assets/img/pexels/books.jpg
 footer_text: " "
 
