--- a/_data/language.yml
+++ b/_data/language.yml
@@ -11,6 +11,6 @@ str_previous_post: "이전글"
 str_next_page: "다음"
 str_previous_page: "이전"
 str_javascript_required_disqus: "Please enable JavaScript to view comments."
-str_no_result_found: "No result found"
+str_no_result_found: "검색 결과가 없습니다."
 str_cookie_approve: "Approve"
 str_cookie_disclaimer: "We would like to use third party cookies and scripts to improve the functionality of this website."
