--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ favicon: assets/favicon.ico                             # Icon displayed in the 
 # Header and footer text
 header_text: "기록하고 기억하기"  # Change Blog header text
 header_feature_image: assets/img/pexels/books.jpg
-footer_text: " "
+footer_text: "© 2020 Inhee Kim"
 
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
