--- a/_data/language.yml
+++ b/_data/language.yml
@@ -1,16 +1,11 @@
 # Localization strings
-str_follow_on: "Follow on"
-str_rss_follow: "Follow RSS feed"
-str_share_on: "Share on"
 str_add_to: "Add to"
 str_email: "이메일"
-str_tweet: "트윗"
-str_pin_it: "핀"
 str_next_post: "다음글"
 str_previous_post: "이전글"
 str_next_page: "다음"
 str_previous_page: "이전"
-str_javascript_required_disqus: "Please enable JavaScript to view comments."
+str_javascript_required_disqus: "댓글을 보려면 JavaScript를 활성화해주세요."
 str_no_result_found: "검색 결과가 없습니다."
-str_cookie_approve: "Approve"
-str_cookie_disclaimer: "We would like to use third party cookies and scripts to improve the functionality of this website."
+str_cookie_approve: "허용"
+str_cookie_disclaimer: "이 웹 사이트의 기능을 개선하기 위해 서드파티 쿠키와 스크립트를 사용하고 싶습니다."
