--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ paginate: 5
 paginate_path: "/page:num"
 
 collections:
-  category:
+  categories:
     output: true
-    permalink: /:collection/:name
+    permalink: /category/:name
 
 # BUILD SETTINGS
 plugins: [jekyll-paginate, jekyll-seo-tag, jekyll-feed]
