--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ paginate: 5
 paginate_path: "/page:num"
 
 collections:
-  category:
+  categories:
     output: true
     permalink: /category/:name
 
