--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ paginate_path: "/page:num"
 collections:
   category:
     output: true
+    permalink: /category/:name
 
 # BUILD SETTINGS
 plugins: [jekyll-paginate, jekyll-seo-tag, jekyll-feed]
