--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ paginate_path: "/page:num"
 collections:
   category:
     output: true
-    permalink: "/category/:name"
+    permalink: "/:collection/:name"
 
 defaults:
   -
